Closed
Bug 410860
Opened 18 years ago
Closed 18 years ago
Crash calling getBoundingClientRect on SVG element [@ nsIFrame::GetStyleContext]
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jruderman, Assigned: roc)
Details
(Keywords: crash, testcase)
Crash Data
Attachments
(2 files)
|
192 bytes,
image/svg+xml
|
Details | |
|
3.17 KB,
patch
|
MatsPalmgren_bugz
:
review+
MatsPalmgren_bugz
:
superreview+
mtschrep
:
approval1.9+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9b3pre) Gecko/2008010323 Minefield/3.0b3pre
Calling getBoundingClientRect on an SVG element crashes Firefox.
Stack trace:
0 nsIFrame::GetStyleContext() (nsIFrame.h:607)
1 nsIFrame::PresContext() (nsIFrame.h:471)
2 nsNSElementTearoff::GetBoundingClientRect (nsGenericElement.cpp:820)
3 NS_InvokeByIndex_P (xptcinvoke_unixish_x86.cpp:179)
...
| Assignee | ||
Comment 1•18 years ago
|
||
Sorry Mats, I bungled this one
Assignee: nobody → roc
Status: NEW → ASSIGNED
Attachment #295479 -
Flags: superreview?(mats.palmgren)
Attachment #295479 -
Flags: review?(mats.palmgren)
Updated•18 years ago
|
Attachment #295479 -
Flags: superreview?(mats.palmgren)
Attachment #295479 -
Flags: superreview+
Attachment #295479 -
Flags: review?(mats.palmgren)
Attachment #295479 -
Flags: review+
| Assignee | ||
Comment 2•18 years ago
|
||
Comment on attachment 295479 [details] [diff] [review]
fix
fix stupid crash regression
Attachment #295479 -
Flags: approval1.9?
Updated•18 years ago
|
Attachment #295479 -
Flags: approval1.9? → approval1.9+
| Assignee | ||
Comment 3•18 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Updated•14 years ago
|
Crash Signature: [@ nsIFrame::GetStyleContext]
You need to log in
before you can comment on or make changes to this bug.
Description
•