Bug 410860. Get the prescontext before 'frame' is set to null. r+sr=mats, a=schrep